<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iPay</string>
    <string name="copyright">Copyright</string>
    <string name="iPay_system">iPay Systems Ltd.</string>
    <string name="iPay_copyright">Copyright 2016 iPay Systems Ltd.</string>
    <string name="all_rights_reserved">All Rights Reserved. </string>
    <string name="bangladesh">Bangladesh</string>
    <string name="phone_init">+880</string>
    <string name="web">Web</string>
    <string name="android">android</string>
    <string name="ios">ios</string>
    <string name="browser">browser</string>
    <string name="mobile_android">mobile-android-</string>
    <string name="no_iPay_account">The user doesn\'t have an iPay account</string>
    <string name="enter_OTP_sent_to_your_mobile">Enter OTP sent to your mobile</string>
    <string name="invalid_otp_with_characters">OTP must contain only digits</string>
    <string name="enter">Please enter your</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_mobile">Enter your mobile number </string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_new">Enter your password</string>
    <string name="prompt_business_name">Business Name</string>
    <string name="prompt_doing_business_as">Doing Business As</string>
    <string name="prompt_company_name">Company Name (Optional)</string>
    <string name="prompt_business_addr_line2">Address Line 2 (Optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="type_of_business">Type of Business</string>
    <string name="error_invalid_QR_code">This QR code is invalid</string>
    <string name="password_hint">Password must contain minimum 8 characters and be alphanumeric. </string>
    <string name="name">Name</string>
    <string name="enter_new_pin">PIN (4 digit)</string>
    <string name="confirm_your_pin">Confirm PIN</string>
    <string name="enter_new_pass">Enter a new password</string>
    <string name="enter_your_pass">Enter your password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="not_set_yet">Not set yet</string>
    <string name="email_address">Email Address</string>
    <string name="primary_email_address">Primary Email Address</string>
    <string name="other_email_address">Other Email Addresses</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="invalid_address_line_1">Please enter Address Line 1</string>
    <string name="select_from_date_first">Please select the from date first</string>
    <string name="select_a_valid_date">Please select a valid date</string>
    <string name="browsers_and_apps"><![CDATA[Browsers & Apps]]></string>
    <string name="same_as_present_address">Same as Present Address</string>
    <string name="introduced_on">Introduced on: </string>
    <string name="invalid_business_name">Enter a business name</string>
    <string name="invalid_business_type">Enter a business type</string>
    <string name="not_set">Not Set</string>
    <string name="thana">Thana</string>
    <string name="invalid_thana">Please select a Thana</string>
    <string name="district">District</string>
    <string name="discount_optional">Discount (Optional)</string>
    <string name="discount">Discount</string>
    <string name="invalid_district">Please select a District</string>
    <string name="postcode">Postcode</string>
    <string name="invalid_postcode">Please enter a valid 4-digit postcode</string>
    <string name="invalid_passport_ID_insufficient_length">Passport ID should be 9 characters long </string>
    <string name="invalid_passport_ID">Invalid Passport ID</string>
    <string name="invalid_driving_license_ID">Invalid Driving License ID</string>
    <string name="invalid_driving_license_ID_insufficient_length">Driving License ID should be 15 characters long</string>
    <string name="invalid_tin">Invalid Tin</string>
    <string name="invalid_birth_certificate">Invalid Birth Certificate ID</string>
    <string name="invalid_nid_min_length">NID should be at least 10 digits long</string>
    <string name="invalid_nid_max_length">NID should be max 17 digits long</string>
    <string name="invalid_business_tin_wrong_length">Business TIN should be 12 digits long</string>
    <string name="invalid_trade_license_ID_wrong_length">Trade License ID should be 8 digits long</string>
    <string name="invalid_vat_reg_cert_ID_wrong_length">Vat Registration Certificate ID should be 11 digits long</string>
    <string name="occupation">Occupation</string>
    <string name="organization_name">Organization Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name_mobile_number">Name or Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="number">number</string>
    <string name="number_uppercase">Number</string>
    <string name="inception_date">Inception Date</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="terms_of_promotion">Terms of Promotion</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contacts_info">iPay will be pleased to discuss any concern or scope of improvement in our Payment Application. Please feel free to contact us.</string>
    <string name="contact_person_mobile_number">Mobile number of contact person</string>
    <string name="contact_already_exists">Contact already exists</string>
    <string name="business_mobile_number">Business Mobile Number</string>
    <string name="confirm_password_not_matched">Password did not match</string>
    <string name="change_password_success">Password change successful</string>
    <string name="change_password_success_message">Your password is changed successfully. Now you will be logged out from all devices. Please login again to continue.</string>
    <string name="confirm_pin_not_matched">PIN did not match</string>
    <string name="empty_bank_account_list">You have no bank account linked with iPay. Please link a bank to add money in your iPay account.</string>
    <string name="empty_payable_list">You have no payable items at this moment. Click + button to add a fee to pay.</string>
    <string name="empty_transaction_history">No transaction to show right now.</string>
    <string name="empty_ipay_here">No business found near this location.</string>
    <string name="empty_list">Nothing to show right now.</string>
    <string name="empty_list_offer">No promotional offer available right now.</string>
    <string name="not_empty_list_for_password_recovery"> If you forget your password and try to recover it, we will send text messages to the persons in your Trusted Network, you will be asked to enter the codes contained in those messages.</string>
    <string name="empty_list_for_password_recovery">Tap + to add a person to your Trusted Network.\n\nIf you forget your password and try to recover it, we will send text messages to the persons in your Trusted Network.\nYou will be asked to enter the codes contained in those messages.</string>
    <string name="remove_trusted_device_message">Removing device from your trusted device list</string>
    <string name="remove_trusted_person_message">Removing from your trusted network</string>
    <string name="error_invalid_mobile_number">Please enter a valid mobile number</string>
    <string name="error_invalid_pin">PIN must be 4 digit</string>
    <string name="error_invalid_otp">Please enter the OTP sent to your mobile</string>
    <string name="error_invalid_otp_with_required_length">OTP must be 6 digit</string>
    <string name="error_promo_code_empty">Please enter the promo code</string>
    <string name="error_invalid_first_name">Please enter name</string>
    <string name="error_invalid_name">Please enter name</string>
    <string name="business_name_required">Business name is required</string>
    <string name="error_invalid_name_with_required_length">Please enter a valid name of minimum 5 characters</string>
    <string name="error_invalid_birthday">Please enter birthday</string>
    <string name="error_invalid_promo_code">Invalid promo code</string>
    <string name="error_space_not_allowed">Space is not allowed</string>
    <string name="please_select_institution">Please select an institution</string>
    <string name="please_select_payment_item">Please select a fee</string>
    <string name="please_select_session">Please select a session</string>
    <string name="please_enter_student_id">Please enter Student ID</string>
    <string name="please_enter_relationship">Please enter a Relationship</string>
    <string name="error_loading_data">Error loading data. Please try again.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="join_us">Join Us</string>
    <string name="enter_the_amount_we_sent">Enter the amount we sent to your bank account here.</string>
    <string name="contacts">Contacts</string>
    <string name="department">Department</string>
    <string name="student_id">Student ID</string>
    <string name="save">Save</string>
    <string name="activity_log">Activity Log</string>
    <string name="promo_code">Promo Code</string>
    <string name="continue_education_payment">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="additional_info">Additional Information</string>
    <string name="account">Account</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="education_payment_description">Write a note</string>
    <string name="zero_value">0.00 BDT</string>
    <string name="enter_current_pass">Enter current password</string>
    <string name="add_bank_agreement_title">Declaration by iPay Member for the linked bank account</string>
    <string name="add_bank_agreement">I am hereby authorizing iPay Systems Ltd to debit or credit my below mentioned bank account for bank transaction instructions generated from the settlement bank of iPay Systems Ltd.</string>
    <string name="add_bank_agreement_additional_message">We will deposit a random amount in your bank account as a part of verification process. You need to provide the deposited verification amount to link the bank with your iPay account. Please note that, bank verification process may take up to 3 working days.</string>
    <string name="bank_branch">Branch</string>
    <string name="i_agree">I agree</string>
    <string name="disagree">Disagree</string>
    <string name="logout">Log Out</string>
    <string name="make_payment">Make Payment</string>
    <string name="about">About</string>
    <string name="session_text">Session: </string>
    <string name="security">Security</string>
    <string name="bank_name">Bank Name</string>
    <string name="amount">Amount</string>
    <string name="net_payable">Net Payable</string>
    <string name="service_charge">Service Charge</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="vat">(+) Vat</string>
    <string name="AMOUNT">Amount</string>
    <string name="TOTAL">Total</string>
    <string name="session">Session</string>
    <string name="student_name">Student Name</string>
    <string name="net_amount">Net Amount (Tk)</string>
    <string name="status">Status</string>
    <string name="help">Help</string>
    <string name="source_of_fund">Source Of Fund</string>
</resources>