<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_drawer_profile"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_ipay_source_of_fund"
            android:icon="@drawable/ic_source_of_fund"
            android:title="@string/source_of_fund" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_security_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/security" />
        <item
            android:id="@+id/nav_user_activity"
            android:icon="@drawable/ic_activity_log"
            android:title="@string/activity_log" />
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_promo_code"
            android:title="@string/promo_code"
            android:visible="true" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/language_settings"
            android:title="@string/language" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_drawer_about"
            android:title="@string/about" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>
