<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout style="@style/LinearLayoutHolder">

        <TextView
            style="@style/TextViewInfoLabelReview"
            android:text="@string/AMOUNT" />

        <TextView
            android:id="@+id/textview_amount"
            style="@style/TextViewInfoColorPrimaryReview" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/LinearLayoutHolder">

        <TextView
            style="@style/TextViewInfoLabelReview"
            android:text="@string/vat" />

        <TextView
            android:id="@+id/textview_vat"
            style="@style/TextViewInfoColorPrimaryReview" />

    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/LinearLayoutHolder">

        <TextView
            style="@style/TextViewInfoLabelReview"
            android:text="@string/TOTAL" />

        <TextView
            android:id="@+id/textview_total"
            style="@style/TextViewInfoColorPrimaryReview" />

    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/service_charge_layout">

        <TextView
            style="@style/TextViewInfoLabelReview"
            android:text="@string/service_charge" />

        <TextView
            android:id="@+id/textview_service_charge"
            style="@style/TextViewInfoColorPrimaryReview" />

    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewInfoLabelReview"
            android:text="@string/net_amount" />

        <TextView
            android:id="@+id/textview_net_amount"
            style="@style/TextViewInfoColorPrimaryReview" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/LinearLayoutHolder">

        <TextView
            style="@style/TextViewInfoLabel"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status"
            style="@style/TextViewInfoColorPrimary" />

    </LinearLayout>

    <View style="@style/Divider" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_card">

        <EditText
            android:id="@+id/pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pin"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:visibility="gone">

            <requestFocus />
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_cancel"
        style="@style/PrimaryMediumButtonReject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:visibility="gone" />
</LinearLayout>