<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_institute_name"
                style="@style/TextViewUserInfoPrimary"
                android:ellipsize="end"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewUserInfoSecondaryWidthWrapContent"
                    android:text="@string/session_text" />

                <TextView
                    android:id="@+id/textview_session_name"
                    style="@style/TextViewUserInfoSecondary"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewInfoLabel"
                    android:text="@string/amount" />

                <TextView
                    android:id="@+id/textview_amount"
                    style="@style/TextViewInfo" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewInfoLabel"
                    android:text="@string/discount" />

                <TextView
                    android:id="@+id/textview_discount"
                    style="@style/TextViewInfo"
                    android:hint="@string/zero_value" />

            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewInfoLabel"
                    android:text="@string/vat" />

                <TextView
                    android:id="@+id/textview_vat"
                    style="@style/TextViewInfo" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewInfoLabel"
                    android:text="@string/net_payable" />

                <TextView
                    android:id="@+id/textview_net_payable"
                    style="@style/TextViewInfo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_description_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ListHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:text="@string/additional_info" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/CustomTextInputLayout">

                <EditText
                    android:id="@+id/discount"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/discount_optional"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/write_a_note_layout"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/description"
                    style="@style/CustomEditTextWithBottomError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/education_payment_description"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_payment"
            style="@style/ButtonPrimaryWithNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_payment"
            />
    </LinearLayout>
</ScrollView>