<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        style="@style/TransactionHistoryDetailsRow">

        <TextView
            style="@style/TransactionHistoryDetailsRowLeft"
            android:text="@string/student_name" />

        <TextView style="@style/TransactionHistoryDetailsRowRight"/>
    </LinearLayout>

    <LinearLayout
        style="@style/TransactionHistoryDetailsRow">

        <TextView
            style="@style/TransactionHistoryDetailsRowLeft"
            android:text="@string/student_id" />

        <TextView
            android:id="@+id/student_id"
            style="@style/TransactionHistoryDetailsRowRight"/>
    </LinearLayout>

    <LinearLayout
        style="@style/TransactionHistoryDetailsRow">

        <TextView
            style="@style/TransactionHistoryDetailsRowLeft"
            android:text="@string/session" />

        <TextView style="@style/TransactionHistoryDetailsRowRight"/>
    </LinearLayout>

    <View style="@style/Divider" />

</LinearLayout>