<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary">

    <bd.com.ipay.ipayskeleton.CustomView.IconifiedEditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_current_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_signup_pw"
        custom:borderType="up"/>

    <bd.com.ipay.ipayskeleton.CustomView.IconifiedEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_signup_pw"/>

    <bd.com.ipay.ipayskeleton.CustomView.IconifiedEditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_signup_pwc"
        custom:borderType="down"/>

    <Button
        android:id="@+id/save_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/PrimaryButton"
        android:text="@string/save"
        android:textColor="@android:color/white" />

</LinearLayout>